# Vulkan-Raytraced-Indirect

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
Shaders/: Compile.bat
Shaders/Compiled/: ClearBuffer.comp.spv  Debug.frag.spv  FullscreenTriangle.vert.spv  GBuffer.comp.spv  Lit.frag.spv  Mesh.vert.spv  Seascape.frag.spv  Visibility.frag.spv  Visibility.vert.spv
Shaders/Source/: Barycentric.hlsl  Debug.hlsl  FullscreenTriangle.hlsl  GBuffer.hlsl  Lit.hlsl  Material.hlsl  Mesh.hlsl  Visibility.hlsl
Shaders/Source/ShaderLibrary/: AmbientProbe.hlsl  BSDF.hlsl  Color.hlsl  Common.hlsl  Debug.hlsl  DebugMipmapStreaming.hlsl  EntityLighting.hlsl  FoveatedRendering.hlsl  ImageBasedLighting.hlsl  MetaPass.hlsl  ShaderDebugPrint.hlsl  SphericalHarmonics.hlsl  UnityInstancing.hlsl  VolumeRendering.hlsl
Shaders/Source/ShaderLibrary/Sampling/: SampleUVMapping.hlsl  SampleUVMappingInternal.hlsl  Sampling.hlsl
Source/: Camera.cpp  Common.cpp  FreeCamera.cpp  Main.cpp  Material.cpp  Mesh.cpp  Precompiled.cpp  RenderContext.cpp  RenderDelegate.cpp  RenderPass.cpp  ResourceRegistry.cpp  Scene.cpp  imgui.ini
Source/Include/: Camera.h  Common.h  FreeCamera.h  Material.h  Mesh.h  Precompiled.h  RenderContext.h  RenderDelegate.h  RenderPass.h  ResourceRegistry.h  Scene.h
